# powerRayCat

./: .gitmodules  CMakeLists.txt  FixedAndEstimatedErrorTest.cpp  FixedAndEstimatedErrorTest.hpp  FrequencyPhaseEstimator.cpp  FrequencyPhaseEstimator.hpp  README.md  powerRayCat.cpp  powerRayCatTest.cpp  powerRayCatTest.hpp  program.cl
