cmake_minimum_required(VERSION 3.6)
project(powerRayCat)
add_subdirectory(synthSignal)
find_package(OpenCL REQUIRED)
set(SOURCE_FILES powerRayCat.cpp FrequencyPhaseEstimator.cpp FrequencyPhaseEstimator.hpp)
add_executable(powerRayCat ${SOURCE_FILES})
target_link_libraries(powerRayCat OpenCL::OpenCL SynthSignal)
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
set(TEST_SOURCE_FILES powerRayCatTest.cpp)
enable_testing()
add_executable(powerRayCatTest ${TEST_SOURCE_FILES})
target_link_libraries(powerRayCatTest OpenCL::OpenCL SynthSignal)
target_link_libraries(powerRayCatTest ${GTEST_LIBRARY})
add_test(NAME tests COMMAND powerRayCatTest)
