cmake_minimum_required(VERSION 3.6)
project(powerRayCat)
add_subdirectory(synthSignal)
add_subdirectory(minusDarwin)
find_package(OpenCL REQUIRED)
find_package(GTest REQUIRED)

add_executable(powerRayCat powerRayCat.cpp ${SOURCE_FILES} FixedAndEstimatedErrorTest.cpp FixedAndEstimatedErrorTest.hpp)
target_link_libraries(powerRayCat OpenCL::OpenCL SynthSignal MinusDarwin)

enable_testing()
add_executable(powerRayCatTest powerRayCatTest.cpp powerRayCatTest.hpp)
target_include_directories(powerRayCatTest PUBLIC ${GTEST_INCLUDE_DIRS})
target_link_libraries(powerRayCatTest OpenCL::OpenCL SynthSignal MinusDarwin ${GTEST_LIBRARY})
add_test(NAME all_tests COMMAND powerRayCatTest)
